# ai

./: .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  ENDPOINT_SPECIFIC_TYPES.md  MIGRATION.md  OPENAI_MODELS_REFERENCE.md  README.md  TOOL_RESULT_FIX.md  TOOL_STATES_MIGRATION.md  eslint.config.js  kiira.config.ts  knip.json  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  terminalOutput  test-autocomplete.ts  tsconfig.base.json  tsconfig.json
.agentsroom/: agents.json  prompts.json
.changeset/: accumulate-tool-results.md  acp-compatible.md  activity-observers.md  add-anthropic-models-export.md  add-grok-adapter.md  add-litellm-adapter.md  ag-ui-client-compliance.md  ag-ui-events.md  ag-ui-interrupts.md  ai-acp-extract.md  ai-antigravity-cli-initial.md  ai-bedrock-adapter.md  ai-bedrock-mantle-per-model-path.md  ai-bedrock-static-bundler-specifiers.md  (+232 more)
crates/tanstack-ai/: Cargo.toml  release.md
crates/tanstack-ai/src/: adapter.rs  chat.rs  error.rs  lib.rs  messages.rs  middleware.rs  stream_response.rs  types.rs
crates/tanstack-ai/src/adapters/: anthropic.rs  gemini.rs  mod.rs  openai.rs
crates/tanstack-ai/src/client/: connection_adapters.rs  mod.rs
crates/tanstack-ai/src/stream/: json_parser.rs  mod.rs  processor.rs  strategies.rs  types.rs
crates/tanstack-ai/src/tools/: definition.rs  mod.rs  registry.rs  tool_calls.rs
crates/tanstack-ai/tests/: chat_tests.rs  stream_processor_tests.rs  test_utils.rs  tool_call_manager_tests.rs  unit_tests.rs
examples/ag-ui/servers/rust/: Cargo.toml  README.md
(+1635 files in other folders)
