[package]
name = "ag-ui-echo-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream = "0.3.6"
axum = "0.8.9"
futures-util = "0.3.33"
reqwest = { version = "0.13.4", default-features = false, features = [
  "json",
  "rustls-tls",
  "stream",
] }
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
tokio = { version = "1.53.1", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.19"
